--- a/dangnhap.html
+++ b/dangnhap.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="../css/dangnhap.css">
+    <link rel="stylesheet" href="./css/dangnhap.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 <body>
     <video  autoplay loop muted>
-        <source src="../video/FPT.mp4">
+        <source src="./video/FPT.mp4">
     </video>
     <header class="header">
         <img src="./img/khoa-logo2.png" alt="" style="width:150px;">
         <nav class="navigation">
-            <a href="./product.html">Trang Chủ</a>
-            <a href="./home.html">Cửa Hàng</a>
+            <a href="index.html">Trang Chủ</a>
+            <a href="home.html">Cửa Hàng</a>
             <a href="#">Help</a>
             <button class="btnLogin-popup">Đăng Nhập</button>
         </nav>
@@ -73,7 +73,7 @@
             </form>
         </div>
     </div>
-    <script src="../js/dangnhap.js"></script>
+    <script src="./js/dangnhap.js"></script>
     
 </body>
 </html>
