--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="navbar-logo">
                 <a href="index.html">
                     <div class="logo-container">
-                        <img src="./img/logo_name.png" alt="SolarSiteseer 3D Logo" class="logo-3d">
+                        <img src="./img/logo_name.png"  class="logo-3d">
                         <span class="logo-text">Thiết Bị An Ninh An Toàn</span>
                     </div>
                 </a>
@@ -103,10 +103,10 @@
                 </div>
                 
                 <div class="hero-image">
-                    <img src="./img/product_21.webp" alt="Güneş panelleri" class="main-image">
+                    <img src="./img/product_21.webp"  class="main-image">
                     <div class="info-card">
                         <div class="info-card-content">
-                            <img src="./img/product_21.webp" alt="SolarSiteseer Logo" class="info-logo">
+                            <img src="./img/product_21.webp"  class="info-logo">
                             <div class="info-text">
                                 <h3>Giảm tới 70% chi phí an ninh</h3>
                                 <p>Hệ thống camera giám sát chất lượng cao giúp tiết kiệm chi phí bảo mật từ tháng đầu tiên.</p>
@@ -117,8 +117,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Products Section -->
     <section class="products" id="products">
         <div class="container">
             <div class="section-header">
@@ -129,7 +127,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="./img/product_25.webp" alt="Güneş Panelleri">
+                        <img src="./img/product_25.webp">
                     </div>
                     <div class="product-info">
                         <h3>Camera Ngoài Trời</h3>
