--- a/home.html
+++ b/home.html
@@ -71,6 +71,7 @@
                                     <th>Sản Phẩm</th>
                                     <th>Giá</th>
                                     <th>SL</th>
+                                    <th>Tổng</th>
                                     <th>Chọn</th>
                                 </tr>
                             </thead>
@@ -81,6 +82,7 @@
                         <h3 style="text-align:right; color:white;">
                             Tổng Tiền: <span id="total-price">0 VND</span>
                         </h3>
+                        <button onclick="checkout()" class="btn-primary" style="margin-top: 10px;">Thanh Toán</button>
                     </div>
                 </div>
             </div>
