--- a/home.html
+++ b/home.html
@@ -69,6 +69,7 @@
                             <thead>
                                 <tr>
                                     <th>Sản Phẩm</th>
+                                    <th>Tên SP</th>
                                     <th>Giá</th>
                                     <th>SL</th>
                                     <th>Tổng</th>
